# shadertoy

./: .gitignore  LICENSE  Makefile.toml  README.md  codecov.yml  melos.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  coverage.yml  dart-ci.yml  dart-coverage.yml  dart_ci.yml  dart_coverage.yml  gh-project.yml  gh-release.yml  gh-stale.yml  plantuml.yml  project.yml  publish.yml  rust-ci.yaml  rust-release.yaml  rust_ci.yml
crates/: Cargo.toml
crates/shadertoy_wgpu/: Cargo.toml  README.md
crates/shadertoy_wgpu/examples/: example.rs
crates/shadertoy_wgpu/src/: lib.rs
crates/shadertoy_wgpu/src/types/: mod.rs  renderer.rs
crates/shadertoy_wgpu_ffi/: Cargo.toml  README.md
crates/shadertoy_wgpu_ffi/src/: errors.rs  lib.rs  renderer.rs
staging/crates/shadertoy_wgpu/src/: errors.rs  lib.rs
staging/crates/shadertoy_wgpu/src/types/: renderer.rs  shadertoy.rs
staging/crates/shadertoy_wgpu_ffi/src/: errors.rs
