[package]
name = "shadertoy_wgpu"
version = "2.0.3"
authors = ["ivoleitao <self@ivoleitao.info>"]
edition = "2018"
description = "Cross-platform shadertoy wgpu renderer"
repository = "https://github.com/ivoleitao/shadertoy"
readme = "README.md"
categories = ["graphics", "rendering", "multimedia::images", "multimedia::video"]
keywords = ["wgpu", "graphics", "shadertoy"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "ivoleitao/shadertoy" }
is-it-maintained-open-issues = { repository = "ivoleitao/shadertoy" }

[dependencies]
anyhow = "1.0.43"
thiserror = "1.0.26"
bytemuck = { version = "1.4", features = [ "derive" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crevice = "0.7.1"
mint = "0.5"
pollster = "0.2"
image = "0.23"
wgpu = "0.10.1"