[package]
name = "shadertoy_wgpu_ffi"
version = "2.0.3"
authors = ["ivoleitao <self@ivoleitao.info>"]
edition = "2018"
description = "FFI bindings for the shadertoy wgpu renderer"
repository = "https://github.com/ivoleitao/shadertoy"
readme = "README.md"
categories = ["os"]
keywords = ["shadertoy", "wgpu", "ffi", "linux", "macos", "windows"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "ivoleitao/shadertoy" }
is-it-maintained-open-issues = { repository = "ivoleitao/shadertoy" }

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.43"
ffi-support = "0.4.4"

[dependencies.shadertoy_wgpu]
path = "../shadertoy_wgpu"